--- a/html+css/HTML学习.html
+++ b/html+css/HTML学习.html
@@ -140,6 +140,7 @@ doctype不区分大小写
   			-->
 
   	   <a href="https://www.baidu.com" target="tom">点我</a> 
+  	   <!-- href：hypertext reference的缩写，意思是指定超链接目标的url -->
 	</body>
 
 	<!-- <center></center> 内部的所有东西会在页面中居中显示，但这个标签控制的是表现，现在用css控制，不赞成使用，仅供了解。 -->
